--- a/src/input.css
+++ b/src/input.css
@@ -6,7 +6,7 @@
 
 @layer utilities {
     #mobile-menu.active {
-        @apply w-[225px] sm:w-1/3 p-5 opacity-100 shadow-2xl
+        @apply w-2/3 p-6 shadow-2xl
     }
 
     #overlay.active {
